# MockyDick

./: .gitignore  LICENSE  README.md  getmocked.yaml  mockyfast.yaml  pyproject.toml
mocks/: mockydick.yaml  mockyfast.yaml
mocks/data/: users.csv  users.json
responses/: users.json
src/getmocked/: app.py  cli.py
src/mockydick/: app.py  cli.py  config.py
src/mockydick/datasources/: csv_source.py
src/mockyfast/: app.py  cli.py  config.py  state_store.py
src/mockyfast/datasources/: json_source.py
tests/: test_app.py  test_cli.py  test_config.py
